d2c-org/ilh-sales/base-objects/main/default/objects/Quote/Quote.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>