d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>