d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Age based on todays date. If deceased, the age at death.</description>
    <label>Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>