d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/BillingMethod__c.field-meta.xml
<CustomField>
    <fullName>BillingMethod__c</fullName>
    <description>Billing method - from Eligible Billing Options in product info response</description>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Billing Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>