d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>