d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/CancelContinueTerm__c.field-meta.xml
<CustomField>
    <fullName>CancelContinueTerm__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Cancel/Continue Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Continue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>