d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/ContinueADBWaiverRider__c.field-meta.xml
<CustomField>
    <fullName>ContinueADBWaiverRider__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <label>Continue ADB/Waiver Rider</label>
    <type>Checkbox</type>
</CustomField>