d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/ConversionType__c.field-meta.xml
<CustomField>
    <fullName>ConversionType__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term Insurance Policy</fullName>
            </value>
            <value>
                <fullName>Other Insured Rider</fullName>
            </value>
            <value>
                <fullName>Term Insurance Rider</fullName>
            </value>
            <value>
                <fullName>Child Insurance Rider</fullName>
            </value>
            <value>
                <fullName>Spouse Insurance Rider</fullName>
            </value>
            <value>
                <fullName>Guaranteed Insurability Rider</fullName>
            </value>
            <value>
                <fullName>Employee Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>