d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/CoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>CoverageAmount__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Coverage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>