d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/HealthAssessment__c.field-meta.xml
<CustomField>
    <fullName>HealthAssessment__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Health concerns that may prevent customer from qualifying for a traditional, underwritten life insurance policy.</description>
    <inlineHelpText>Are you aware of any medical issues or health concerns that you think would keep you from qualifying for a traditional, underwritten life insurance policy?</inlineHelpText>
    <label>Health Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Issues</fullName>
            </value>
            <value>
                <fullName>No Health Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>