d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/InsurancePurpose__c.field-meta.xml
<CustomField>
    <fullName>InsurancePurpose__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Insurance Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final Expenses</fullName>
            </value>
            <value>
                <fullName>Income Replacement</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>