d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/InsuredAge__c.field-meta.xml
<CustomField>
    <fullName>InsuredAge__c</fullName>
    <label>Insured Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>