d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/PaperKitRequestDate__c.field-meta.xml
<CustomField>
    <fullName>PaperKitRequestDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Date the action was taken in the cart</description>
    <label>Paper Kit Request Date</label>
    <type>Date</type>
</CustomField>