d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/PaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>PaymentFrequency__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Payment Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>