d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/PolicyCoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>PolicyCoverageAmount__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Policy Coverage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>