d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Policy Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>