d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>