d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/QuoteRider__c.field-meta.xml
<CustomField>
    <fullName>QuoteRider__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Rider</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>