d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/UnderwritingClass__c.field-meta.xml
<CustomField>
    <fullName>UnderwritingClass__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Underwriting Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>