d2c-org/ilh-sales/base-objects/main/default/objects/Quote/fields/UnderwritingClassCode__c.field-meta.xml
<CustomField>
    <fullName>UnderwritingClassCode__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Underwriting Class Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>