d2c-org/ilh-sales/base-objects/main/default/objects/Quote/recordTypes/ILHSalesQuote.recordType-meta.xml
<RecordType>
    <fullName>ILHSalesQuote</fullName>
    <active>true</active>
    <label>ILH Sales Quote</label>
</RecordType>